styles.css
@import url('https://fonts.googleapis.com/css2?family=Mountains+of+Christmas:wght@700&display=swap');
* {
	box-sizing: border-box;
}

input, button, textarea, select {
  font: inherit;
}

:root {
	--gold: #bea35c;
	--gold-dark: #ae9145;


  --pink: #FEEEE6;
  --light-coral: #F08080;
  --pink-dark: #F48184;
  --red-dark: #ad2711;
  --goldenrod: #DBA505;
  --green-light: #F2F0DB;
  --dark-green: #243902;
  --green-medium: #507011;
  --blue-light: #B1BDD5;
  --blue-dark: #30405A;
  --sumac: #E58B25;
}

body {
  background: var(--pink);
	font-family: 'Mountains of Christmas', cursive;
  font-weight: 700;
  margin: 0;
  min-height: 100vh;
  min-width: 100vw; 
  overflow-y: scroll;
  overflow-x: hidden;
}

main {
display: flex;
flex-direction: column;
align-items: center;
text-align: center;
}

h1 {
  text-align: center;
  font-size: clamp(
    2.5rem,
    3vw + 1rem,
    4.5rem
  );
  color: var(--blue-dark);
  padding: 0;
  margin: 0;
  margin-bottom: 10px;;
}

h2 {
  font-size: clamp(
    1.25rem,
    3vw + 1rem,
    2rem
  );
  padding: 0;
  margin: 0;
}

.tree {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-gap: 1px;
  position: relative;
  padding: 20px 0;
  max-width: 70rem;
}

.square {
	width: 100%;
	height: 100%;
	min-height: 7rem;
  min-width: 7rem;
	border-radius: 3px;
  border: none;
	box-shadow: inset -7px 0 9px -7px rgba(0, 0, 0, 0.4),
		inset 0 -7px 9px -7px rgba(0, 0, 0, 0.4);
	display: flex;
	align-items: center;
	justify-content: center;
	position: relative;
}

.card {
  height: 100%;
  width: 100%;
  background: none;
  cursor: pointer;
  border: none;
}
.front {
  height: 100%;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}

/* circle with day number */
.dayTag {
  font-size: clamp(
    2rem,
    4vw + 1rem,
    4rem
  );
  display: flex;
  background: var(--blue-light);
  color: var(--green-light);
  box-shadow: 0 0 0 1px var(--green-light), 0 0 0 3px var(--goldenrod);
  width: 60%;
  height: 60%;
  border-radius: 50%;
  align-items: center;
  justify-content: center;
}

.back {
  height: 100%;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.preview {
  display: flex;
  flex-direction: column;
  background: var(--blue-light);
  color: var(--green-light);
  box-shadow: 0 0 0 1px var(--green-light), 0 0 0 3px var(--goldenrod);
  width: 100%;
  height: 100%;
  align-items: center;
  justify-content: center;
}

.back .preview img {
  width: 100%;
  height: 70%; 
  object-fit: contain;
  border-radius: 10px;
}

.credits {
  font-size: 1rem;
  margin-bottom: 5px;
}

@media (min-width: 37rem ) {

  .tree {
    grid-template-columns: repeat(12, 1fr);
  }

  .square:nth-child(1) {
    grid-column: 6 / 8;
  }
  .square:nth-child(2) {
    grid-row: 2;
    grid-column: 5 / 7;
  }
  .square:nth-child(3) {
    grid-row: 2;
    grid-column: 7 / 9;
  }
  .square:nth-child(4) {
    grid-row: 3;
    grid-column: 4 / 6;
  }
  .square:nth-child(5) {
    grid-row: 3;
    grid-column: 6 / 8;
  }
  .square:nth-child(6) {
    grid-row: 3;
    grid-column: 8 / 10;
  }
  .square:nth-child(7) {
    grid-row: 4;
    grid-column: 3 / 5;
  }
  .square:nth-child(8) {
    grid-row: 4;
    grid-column: 5 / 7;
  }
  .square:nth-child(9) {
    grid-row: 4;
    grid-column: 7 / 9;
  }
  .square:nth-child(10) {
    grid-row: 4;
    grid-column: 9 / 11;
  }
  .square:nth-child(11) {
    grid-row: 5;
    grid-column: 2 / 4;
  }
  .square:nth-child(12) {
    grid-row: 5;
    grid-column: 4 / 6;
  }
  .square:nth-child(13) {
    grid-row: 5;
    grid-column: 6 / 8;
  }
  .square:nth-child(14) {
    grid-row: 5;
    grid-column: 8 / 10;
  }
  .square:nth-child(15) {
    grid-row: 5;
    grid-column: 10 / 12;
  }
  .square:nth-child(16) {
    grid-row: 6;
    grid-column: 1 / 3;
  }
  .square:nth-child(17) {
    grid-row: 6;
    grid-column: 3 / 5;
  }
  .square:nth-child(18) {
    grid-row: 6;
    grid-column: 5 / 7;
  }
  .square:nth-child(19) {
    grid-row: 6;
    grid-column: 7 / 9;
  }
  .square:nth-child(20) {
    grid-row: 6;
    grid-column: 9 / 11;
  }
  .square:nth-child(21) {
    grid-row: 6;
    grid-column: 11 / 13;
  }
  .square:nth-child(22) {
    grid-row: 7;
    grid-column: 4 / 6;
  }
  .square:nth-child(23) {
    grid-row: 7;
    grid-column: 6 / 8;
  }
  .square:nth-child(24) {
    grid-row: 7;
    grid-column: 8 / 10;
  }
  
  .square {
    grid-column: span 2;
  }

}

a {
  color: var(--light-coral);
  text-decoration: none;
  outline-color: var(--gold-dark);
}

.tree a {
  outline: none 
}
.tree a:focus {
  border-bottom: var(--gold-dark) 2px solid;
}

/* visited link */
a:visited {
  color: var(--sumac)
}



/*  Wrapping paper colors */

/* blue with red ribbon style */
  .square .card {
    background: var(--blue-light);
    background-image: linear-gradient(
        to bottom,
        transparent 55%,
        rgba(0, 0, 0, 0.1) 60%,
        var(--red-dark) 60%,
        var(--light-coral) 80%,
        rgba(0, 0, 0, 0.1) 80%,
        transparent 85%
      ),
      linear-gradient(
        to right,
        transparent 20%,
        rgba(0, 0, 0, 0.1) 25%,
        var(--light-coral) 25%,
        var(--red-dark) 45%,
        rgba(0, 0, 0, 0.1) 45%,
        transparent 50%
      );
    background-size: 100%;
    background-position: 0;
  }

/* checkerboard styles */
  .square:nth-child(2n) .card {
      background-image: linear-gradient(
          to right,
          rgba(177,189,213, 0.4) 1rem,
          rgba(177,189,213, 0.3) 1rem
        ),
        linear-gradient(to bottom, var(--blue-dark) 1rem, var(--pink-dark) 1rem);
      background-size: 2rem 2rem;
      background-repeat: repeat;
	}

  /* Green dots style */
  .square:nth-child(3n) .card{
		background: var(--green-medium);
		background-image: radial-gradient(var(--dark-green) 35%, transparent 18%),
			radial-gradient(var(--dark-green) 15%, transparent 18%);
		background-size: 16px 16px;
		background-position: 4px 4px, 12px 12px;
	}


/* Stripes style */
  .square:nth-child(5n) .card{
      background: var(--light-coral);
      background-image: linear-gradient(
        to right,
        transparent 30%,
        var(--blue-dark) 30%,
        var(--blue-dark) 45%,
        transparent 45%,
        transparent 55%,
        var(--blue-light) 55%,
        var(--blue-light) 62%,
        transparent 62%,
        transparent 70%,
        var(--blue-light) 70%,
        var(--blue-light) 78%,
        transparent 78%,
        transparent 85%,
        var(--blue-light) 85%
      );
      background-size: 26px;
      background-position: 4px;
	}

  /* Horizontal stripes style */
  .square:nth-child(7n) {
  background: repeating-linear-gradient(
  45deg,
  var(--goldenrod),
  var(--goldenrod) 10px,
  var(--red-dark) 10px,
  var(--red-dark) 11px
);
  }

 /* SNOWFLAKE ANIMATIONS  */

  .snow {
    --size: 1vw;
    --left-ini: 1vw;
    --left-end: 2vw;
    width: var(--size);
    height: var(--size);
    background: white;
    border-radius: 50%;
    position: absolute;
    top: -5vh;
    left: 2vh;
    animation: snowfall 10s linear infinite;
  }

  .snow:nth-child(2) {
    --size:  0.5vw;
    --left-ini: 15vw;
    --left-end: 5vw;
    left: 10vw;
    animation: snowfall 10s linear infinite;
    animation-delay: 3s;
}

.snow:nth-child(3) {
  --size:  1.25vw;
  --left-ini: 15vw;
  --left-end: 14vw;
  left: 10vw;
  animation: snowfall 9s linear infinite;
  animation-delay: 8s;
  filter: blur(1px)
}
.snow:nth-child(4) {
  --size:  1.25vw;
  --left-ini: 15vw;
  --left-end: 14vw;
  left: 30vw;
  animation: snowfall 10s linear infinite;
  animation-delay: 1s;
}

.snow:nth-child(5) {
  --size:  0.5vw;
  --left-ini: 25vw;
  --left-end: 15vw;
  left: 20vw;
  animation: snowfall 12s linear infinite;
  animation-delay: 4s;
}

.snow:nth-child(6) {
  --size:  0.5vw;
  --left-ini: 20vw;
  --left-end: 15vw;
  left: 7vw;
  animation: snowfall 8s linear infinite;
  animation-delay: 4s;
  filter: blur(1px)
}

.snow:nth-child(7) {
  --size:  0.65vw;
  --left-ini: 15vw;
  --left-end: 5vw;
  right: 10vw;
  animation: snowfall 10s linear infinite;
}

.snow:nth-child(8) {
--size:  1.25vw;
--left-ini: 90vw;
--left-end: 64vw;
right: 10vw;
animation: snowfall 9s linear infinite;
animation-delay: 8s;
}
.snow:nth-child(9) {
--size:  1.25vw;
--left-ini: 95vw;
--left-end: 84vw;
right: 30vw;
animation: snowfall 10s linear infinite;
filter: blur(1px)
}

.snow:nth-child(10) {
--size:  0.4vw;
--left-ini: 85vw;
--left-end: 75vw;
right: 20vw;
animation: snowfall 7s linear infinite;
animation-delay: 1s;
}

.snow:nth-child(11) {
--size:  1.15vw;
--left-ini: 70vw;
--left-end: 65vw;
right: 7vw;
animation: snowfall 9.5s linear infinite;
animation-delay: 4s;
filter: blur(2px)
}

.snow:nth-child(12) {
  --size:  0.55vw;
  --left-ini: 70vw;
  --left-end: 65vw;
  right: 7vw;
  animation: snowfall 10s linear infinite;
  }

.snow:nth-child(13) {
  --size:  0.25vw;
  --left-ini: 50vw;
  --left-end: 45vw;
  right: 7vw;
  animation: snowfall 10s linear infinite;
  animation-delay: 1.75s;
  }

  .snow:nth-child(13) {
    --size:  0.45vw;
    --left-ini: 60vw;
    --left-end: 55vw;
    right: 25%;
    animation: snowfall 9.5s linear infinite;
    animation-delay: 1.5s;
  }

@keyframes snowfall {
  0% {
    transform: translate3d(var(--left-ini), 0, 0);
  }
  100% {
    transform: translate3d(var(--left-end), 100vh, 0);
  }
}


/* Gift Animations  */
.square {
  perspective: 500px;
  background: none;
}

.card {
  position: relative;
  display: block;
}
.front, .back {
  width: 100%;
  height: 100%;
  background: none;
  display: flex;
  justify-content: center;
  align-items: center;
  transition: transform 300ms;
  will-change: transform;
  backface-visibility: hidden;
  /* Vendor prefix for Safari */
  -webkit-backface-visibility: hidden;
}
.back {
  position: absolute;
  top: 0;
  left: 0;
  transform: rotateY(-180deg);
}

.card:focus-within .front,
.card:hover .front {
  transform: rotateY(180deg);
  animation: shrink 300ms;
  animation-fill-mode: forwards;

}

.card:focus-within .back,
.card:hover .back {
  animation: grow 300ms;
  animation-delay: 300ms;
  animation-fill-mode: forwards;
}


@keyframes grow {
  0% {
    transform: rotateY(-180deg) scale(0);
  }
  50% {
    transform: rotate(0.75turn)  scale(0.25)
  }
  100% {
    transform: rotateY(0deg) scale(1);
  }
}

@keyframes shrink {
  0% {
    transform: rotate(0.5turn) rotateY(0deg) scale(1);
  }
  50% {
    transform: rotate(0.25turn) rotateY(0deg) scale(0.25)
  }
  100% {
    transform: rotateY(-180deg) scale(0);
  }
}

